Defined the styles for the social media icons (padding, border and hover transitions). Also included class for the author of the site in the footer. ++Created a new class called emoji to use the font-emoji from Google Fonts without damaging the stylization of the phrases.

--- a/index.html
+++ b/index.html
@@ -219,14 +219,6 @@
                         </div>
                         <div class="flex-container">
                             <li>
-                                <a href="https://www.discordapp.com/users/Daniela Rodríguez#7616" target="_blank" class="social-media-link">
-                                    <i class="fa-brands fa-discord social-media-icon"></i>
-                                    <p class="social-media-user">Daniela Rodríguez</p>
-                                </a>
-                            </li>
-                        </div>
-                        <div class="flex-container">
-                            <li>
                                 <a href="https://www.linkedin.com/in/danielarodga" target="_blank" class="social-media-link">
                                     <i class="fa-brands fa-linkedin-in social-media-icon"></i>
                                     <p class="social-media-user">Daniela Rodríguez</p>
@@ -296,20 +288,21 @@
         <ul class="horizontal-list">
             <li>
                 <a href="https://www.twitter.com/Daany_Ro" target="_blank" class="fo-social-media-link">
-                <i class="fa-brands fa-twitter fo-social-media-icon"></i>
+                    <i class="fa-brands fa-twitter fo-social-media-icon"></i>
                 </a>
             </li>
             <li>
-
+                <a href="https://www.linkedin.com/in/danielarodga" target="_blank" class="fo-social-media-link">
+                    <i class="fa-brands fa-linkedin-in fo-social-media-icon"></i>
+                </a>
             </li>
             <li>
-
-            </li>
-            <li>
-
+                <a href="mailto:danierodga@gmail.com" target="_blank" class="fo-social-media-link">
+                    <i class="fa-solid fa-envelope fo-social-media-icon"></i>
+                </a>
             </li>
         </ul>
-           
+        <p class="footer-site-author">Hecho con <span class="emoji">💖</span> por <span class="emphasis-author">Daniela Rodríguez</span></p>
     </footer>
 </body>
 </html>
