Reduced the quantity of lines of code duplicated in the CSS file. Applied the media queries necesaries to be responsive to mobile devices to the section quote and contact-me.

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     </ul>
                 </div>
                 <div class="element-row">
-                        <h1 class="section-title contact-title">Send me a message</h1>
+                        <h1 class="section-title contact-title">Send me a mail</h1>
                         <form action="/message-send" method="POST" class="contact-form">
                             <ul class="vertical-list">
                                 <div class="flex-container">
@@ -244,9 +244,6 @@
                                         <li class="form-item">
                                             <label for="first_name" class="form-label">First name *</label>
                                             <input type="text" name="full_name" id="first_name" class="form-input" placeholder="e. g.: Daniela" required>                          
-                                            <!-- <i class="fa-regular fa-circle-check" aria-hidden="true"></i>
-                                            <i class="fa-regular fa-circle-xmark" aria-hidden="true"></i> -->
-
                                         </li>
                                     </div>
                                     <div class="element-row">
