--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;800&family=Noto+Color+Emoji&family=Pacifico&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
     
     <!-- Cascade Style Sheet -->
-    <link rel="stylesheet" href="/styles/main-styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     <!-- Navbar -->
